<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="com.example.birdcalculate.MainActivity">

<EditText android:id="@+id/operand_one_edit_text"
    android:hint="@string/type_operand_one_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"/>

<EditText android:id="@+id/operand_two_edit_text"
    android:hint="@string/type_operant_two_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button android:id="@+id/operation_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_operation_text"
        android:onClick="onPlus"/>

    <Button android:id="@+id/operation_sub_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_operation_text"
        android:layout_toRightOf="@id/operation_add_button"
        android:layout_toEndOf="@id/operation_add_button"
        android:onClick="onMinus"/>

    <Button android:id="@+id/operation_div_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div_operation_text"
        android:layout_below="@id/operation_add_button"
        android:onClick="onDivide"/>

    <Button android:id="@+id/operation_mul_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mul_operation_text"
        android:layout_below="@id/operation_add_button"
        android:layout_toRightOf="@id/operation_add_button"
        android:layout_toEndOf="@id/operation_add_button"
        android:onClick="onMultiple"/>

</RelativeLayout>

<TextView android:id="@+id/operation_result_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"/>
</LinearLayout>
